syntax = "proto3";
package userservice;

message User{
    int32 id =1;
    string username = 2;
    string password = 3;
}

message CreateUserRequest{
    string username = 1;
    string password = 2;
}

message CreateUserResponse{
    User user = 1;
}

message GetUserRequest{
    string username = 1;
}

message GetUserResponse{
    User user = 1;
}

service UserService{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}